0.2.6:
- cosmetic: remove unnecessary '/' in recording-stream url
- cosmetic: inprove log output 
- change: get the proper device info from the reveiver box instead of just setting dummy values
- change: change the buildzip.bat to include version string in the name of the zip-file

0.2.5:
- fix: cleanup the service reference in the streaming url

0.2.4
- fix: put username & password into the streaming url

0.2.3
- fix: put username & password into recording-url

0.2.2:
- fix: escape xml entities in the stream-url before saving to channeldata.xml
- fix: fetch the version string from configure.in not the ChangeLog (thanks to 'trans')
- fix: rename changelog in addon-directory to changelog.txt

0.2.1:
- fix: encode the stream-url properly. Please remove your channeldata.xml file after updating
- change: add proper version string to the addon.xml generated by buildzip.bat (thanks to 'trans')

0.2.0:
- change: Complete rework of timer handling. Now it will only show notifications for changed items
- fix: Update / Add / Delete Timers. Note that the timer names in the XBMC are sometimes not updated properly (in the dialog it is OK)
- fix: Instant Recordings do now work again
- fix: timer status is now shown correctly (completed, recording, disabled)
- fix: enabling / disabling timers do now work
- change: removed "show completed timers" option (they are now always be shown)
- add: added buildzip.bat & xbmc-addon-vuplus.sln (thanks to 'trans')
- fix: Channel numbering / incorrect picons due to the change introduced in 0.1.15

0.1.15
- fix: when using the channeldata-store option not all channel groups (bouquets) were loaded due to a nulled counter variable

0.1.14
- change: change .gitignores and copy current changelog into the addon folder. This will enable the user to view the changelog in the addon settings window

0.1.13 
- add: option to set deepstandby powerstate on the DVB box on PVR-addon shutdown
- fix: error in settings.xml, causing crashes on linux

0.1.12 